spacing fix

--- a/quiz.css
+++ b/quiz.css
@@ -13,6 +13,7 @@ article {
   display: inline-block;
   margin-bottom: 5px;
   min-height: 500px;
+  margin: 1.4%;
 }
 li {
   list-style: none;
@@ -33,6 +34,8 @@ img {
 }
 .description {
   text-align: justify;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .specs  li, .pricing li {
   font-weight: bold;
@@ -44,9 +47,11 @@ img {
   background-color: darkgray;
   color: yellow;
   margin-bottom: 15px;
+  padding-left: 7px;
 }
 footer {
   font-size: .7em;
+  padding-left: 10px;
 }
 ul {
   margin: 0;
